# HadesWiki

./: .gitignore  GUIDE.md  LICENSE  README.md  index.md  log.md  mkdocs.yml  pyproject.toml  schema.md
.github/workflows/: pages.yml
concepts/: memex.md  operations.md  source-karpathy-llm-wiki.md
docs/: AGENT.md  GUIDE.md  catalog.md  graph.md  home.md  log.md  schema.md  tags.md
docs/assets/: extra.css  extra.js  local-graphs.json  wiki-tree.json
docs/comparisons/: rag-vs-llm-wiki.md
docs/concepts/: llm-wiki-pattern.md  obsidian.md  operations.md  qmd.md  source-karpathy-llm-wiki.md
docs/entities/: karpathy.md
docs/queries/: synthesis-web-vs-rag-vs-llm-wiki.md
docs/raw/articles/: karpathy-llm-wiki.md
entities/: karpathy.md
mkdocs_wikilinks/: README.md  __init__.py  plugin.py
mkdocs_wikilinks_hades.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
queries/: synthesis-web-vs-rag-vs-llm-wiki.md
scripts/: build_graph.py  build_tree_and_graphs.py
