[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mkdocs-wikilinks-hades"
version = "0.1.0"
description = "Custom MkDocs plugin: resolves Obsidian-style wikilinks for HadesWiki, with code-span awareness and backlink tracking."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [{ name = "podsni" }]
dependencies = [
    "mkdocs>=1.5",
]

[project.entry-points."mkdocs.plugins"]
wikilinks = "mkdocs_wikilinks.plugin:WikiLinksPlugin"

[tool.setuptools]
packages = ["mkdocs_wikilinks"]

[tool.setuptools.package-data]
mkdocs_wikilinks = ["README.md"]